【问题描述】：整理netty 服务调用 【修改人】：sdrfengmi 【检视人】：
已删除        bigData/java-spring/zt-server-parent/quotes-service-parent/quotes-service/quotes-service.2019-01-29.0.gz
已删除        bigData/java-spring/zt-server-parent/quotes-service-parent/quotes-service/quotes-service.2019-01-30.0.gz
已删除        bigData/java-spring/zt-server-parent/quotes-service-parent/quotes-service/quotes-service.2019-03-13.0.gz
已删除        bigData/java-spring/zt-server-parent/quotes-service-parent/quotes-service/quotes-service.2019-03-14.0.gz
缺失         bigData/java-spring/config-server/gateway-server/gateway-server-dev.yml
缺失         bigData/java-spring/config-server/gateway-server/gateway-server-prod.yml
缺失         bigData/java-spring/config-server/gateway-server/gateway-server-test.yml
缺失         bigData/java-spring/config-server/information-service/information-service-dev.yml
缺失         bigData/java-spring/config-server/information-service/information-service-prod.yml
缺失         bigData/java-spring/config-server/information-service/information-service-test.yml
缺失         bigData/java-spring/config-server/quotes-service/quotes-service-dev.yml
缺失         bigData/java-spring/config-server/quotes-service/quotes-service-prod.yml
缺失         bigData/java-spring/config-server/quotes-service/quotes-service-test.yml
缺失         bigData/java-spring/config-server/trade-service/trade-service-dev.yml
缺失         bigData/java-spring/config-server/trade-service/trade-service-prod.yml
缺失         bigData/java-spring/config-server/trade-service/trade-service-test.yml
已修改        bigData/java-spring/springboot-study/src/main/java/com/sdrfengmi/study/_005_Netty/string/A.java
已修改        bigData/java-spring/springboot-study/src/main/java/com/sdrfengmi/study/_005_Netty/string/B.java
已修改        bigData/java-spring/springboot-study/src/main/java/com/sdrfengmi/study/_005_Netty/string/ClientBoot.java
已修改        bigData/java-spring/springboot-study/src/main/java/com/sdrfengmi/study/_005_Netty/string/ClientHandler.java
已修改        bigDa